--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -15,19 +15,19 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          pybuilds: cp3{10,11,12,13}-manylinux_x86_64
+          pybuilds: cp3{11,12}-manylinux_x86_64
           arch: x86_64
           id: linux_x86_64
         - os: ubuntu-24.04-arm
-          pybuilds: cp3{10,11,12,13}-manylinux_aarch64
+          pybuilds: cp3{11,12}-manylinux_aarch64
           arch: aarch64
           id: linux_arm64
         - os: macos-13
-          pybuilds: cp3{10,11,12,13}-macosx_x86_64
+          pybuilds: cp3{11,12}-macosx_x86_64
           arch: x86_64
           id: macos_x86
         - os: macos-15
-          pybuilds: cp3{10,11,12,13}-macosx_arm64
+          pybuilds: cp3{11,12}-macosx_arm64
           arch: arm64
           id: macos_arm64
     steps:
@@ -43,9 +43,9 @@ jobs:
         env:
           CIBW_BUILD: ${{ matrix.pybuilds }}
           CIBW_BEFORE_BUILD_MACOS: brew update && brew install cmake boost eigen wget git && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl 
-          CIBW_BEFORE_BUILD_LINUX: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl && cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18 && cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so && ll /project/vcpkg/packages/ompl_x64-linux/lib/
-          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
-          CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-osx/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}" DYLD_LIBRARY_PATH="vcpkg/packages/ompl_x64-osx/lib${DYLD_LIBRARY_PATH:+:$DYLD_LIBRARY_PATH}"
+          CIBW_BEFORE_BUILD_LINUX: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl
+          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" PIP_USE_DEPRECATED="out-of-tree-build"
+          CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" PIP_USE_DEPRECATED="out-of-tree-build"
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32" 
 
       - uses: actions/upload-artifact@v4
